syntax = "proto3";
package api;
option go_package = "./";

import "google/protobuf/timestamp.proto";

import "status.proto";
import "tenants.proto";

service StaffService {
  rpc GetAllStaff (api.IdTenantRequest) returns (stream Staff) {}
  rpc GetOneStaff (IdsStaffRequest) returns (Staff) {}
  rpc CreateStaff (CUStaffRequest) returns (api.Status) {}
  rpc UpdateStaff (CUStaffRequest) returns (api.Status) {}
  rpc DeleteStaff (IdsStaffRequest) returns (api.Status) {}
}

message Staff {
  string id = 1;
  string name = 2;
  string email = 3;
  string position = 4;
  string department = 5;
  string tenantId = 6;
  float  selary = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message AllStaff {
  repeated Staff staff = 1;
}

message CUStaffRequest {
  optional string id = 1;
  string name = 2;
  string email = 3;
  string position = 4;
  string department = 5;
  string tenantId = 6;
}

message IdsStaffRequest {
  string id = 1;
  string tenantId = 2;
}
